--- a/content/Showcase/index.html
+++ b/content/Showcase/index.html
@@ -297,7 +297,7 @@ hideComments=true
                     </p>
                 </div>
             </div>
-            <iframe src="http://store.steampowered.com/widget/3123460/" frameborder="0" width="100%"
+            <iframe src="https://store.steampowered.com/widget/3123460/" frameborder="0" width="100%"
                 height="190"></iframe>
         </div>
     </div>
