--- a/content/apps/graphing/index.html
+++ b/content/apps/graphing/index.html
@@ -20,15 +20,27 @@
             max-width: 100%;
         }
         .container {
-            max-width: 80%;
+            max-width: 85%;
+        }
+        .horizontal_cont {
+            width: 50%;
+            float:left;
+        }
+        .emscripten {
+            z-index: 1000;
         }
 
     </style>
 
-    <canvas class="emscripten" id="canvas" tabindex=-1 width="100%" height="100%"></canvas>
+    <button onclick="fullscreen()">Fullscreen</button>
+    <canvas class="emscripten" id="canvas" tabindex=-1 width="100%" height="100%" ></canvas>
 
     <script type='text/javascript'>
         var canvasElement = document.getElementById('canvas');
+
+        function fullscreen() {
+            canvasElement.requestFullscreen()   
+        }
 
         // As a default initial behavior, pop up an alert when webgl context is lost. To make your
         // application robust, you may want to override this behavior before shipping!
