--- a/content/apps/graphing/index.html
+++ b/content/apps/graphing/index.html
@@ -32,6 +32,11 @@
 
     </style>
 
+    <p>
+        This is an app primarially for the MAT300 projects at DigiPen. It may get updated over time.
+        If nothing is visible, make sure webgpu/webassembly is supported by your browser.
+    </p>
+
     <button onclick="fullscreen()">Fullscreen</button>
     <canvas class="emscripten" id="canvas" tabindex=-1 width="100%" height="100%" ></canvas>
 
