--- a/content/Showcase/index.html
+++ b/content/Showcase/index.html
@@ -212,6 +212,8 @@ hideComments=true
     <div class="video_grid">
         <!-- top section -->
         <div>
+            
+
             <video class="video_container" controls autoplay loop muted>
                 <source src="animation_demo.mp4" type="video/mp4">
                 Your browser does not support the video tag.
@@ -249,11 +251,22 @@ hideComments=true
                     </p>
                 </div>
             </div>
+            <hr>
+            <div class="dropdown">
+                <video class="video_container" controls autoplay loop muted>
+                    <source src="nitelite_audio.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <p class="video_subtitle">Custom engine (NiteLite) 3D audio demo (Unmute me!)</p>
+            </div>
+
+            <hr>
             <div class="dropdown">
                 <p>Game Jam Games (Web Playable!)</p>
-                <iframe frameborder="0" src="https://itch.io/embed/4253774?bg_color=dbdbdb&amp;fg_color=222222&amp;link_color=569a3e&amp;border_color=3f5f93" width="552" height="167"><a href="https://electrp.itch.io/super-mask-melee">Super Mask Melee by electrp</a></iframe>
-                <iframe frameborder="0" src="https://itch.io/embed/3277244?bg_color=402929&amp;fg_color=ffffff&amp;link_color=fa5c5c&amp;border_color=676262" width="552" height="167"><a href="https://electrp.itch.io/surface-tension">Surface Tension by electrp</a></iframe>
+                <iframe frameborder="0" src="https://itch.io/embed/4253774?bg_color=dbdbdb&amp;fg_color=222222&amp;link_color=569a3e&amp;border_color=3f5f93" width="100%" height="167"><a href="https://electrp.itch.io/super-mask-melee">Super Mask Melee by electrp</a></iframe>
+                <iframe frameborder="0" src="https://itch.io/embed/3277244?bg_color=402929&amp;fg_color=ffffff&amp;link_color=fa5c5c&amp;border_color=676262" width="100%" height="167"><a href="https://electrp.itch.io/surface-tension">Surface Tension by electrp</a></iframe>
             </div>
+
         </div>
         <!-- bottom section -->
         <div>
